--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/TL.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/TL.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Toddo List App</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
